--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Almarai&display=swap');
+
+body {
+  font-family: 'Almarai', sans-serif;
+}
+
+
+
+/* Tailwind config */
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-
