--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,127 +1,109 @@
-@import url('https://fonts.googleapis.com/css2?family=Almarai&display=swap');
+.parent {
+  display: flex;
+  justify-content: space-between;
 
-body{
-    height: 100vh;
-    background-color: rgb(181, 124, 234);
-}
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    user-select: none;
-    text-decoration: none;
-    list-style: none;
-    font-size: 18px;
-}
-.parent{
-    display: flex;
-    justify-content: space-between;
- 
-    width: 80%;
-    margin: auto;
-min-height: 500px ;
-    height: fit-content;
-    background-color: #fff;
-    border-radius: 45px;
- 
-    margin-top: 100px;
-    
-}
-.textt{
-    padding: 40px;
-    margin: 10px;
-    width: 50%;
-}
-.textt h1{
-    font-size: 40px;
-    font-style: oblique;
-    font-weight: 900;
-}
-.textt p{
-    font-size: 30px;
-    font-style: oblique;
-    font-weight: 700;
-    padding: 10px;
-}
-.inp{
-    display: flex;
-    justify-content: space-between;
-    margin-top: 50px;
-}
-.inp input{
-    border: none;
-    border-bottom: 1px solid rgb(209, 206, 206);
-    outline: none;
-    padding: 5px;
-    width: 40%;
-}
-.lastinp input{
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid rgb(209, 206, 206);
-    outline: none;
-    padding: 5px;
-    margin-top: 50px;
+  width: 80%;
+  margin: auto;
+  height: 500px;
+  height: fit-content;
+  background-color: #fff;
+  border-radius: 45px;
+
 
 }
-.btn{
-    width: 200px;
-    padding: 10px;
-    background-color: black;
-    color: #fff;
+
+.textt {
+  padding: 40px;
+  margin: 10px;
+  width: 50%;
+}
+
+.textt h1 {
+  font-size: 40px;
+  font-style: oblique;
+  font-weight: 900;
+}
+
+.textt p {
+  font-size: 30px;
+  font-style: oblique;
+  font-weight: 700;
+  padding: 10px;
+}
+
+.inp {
+  display: flex;
+  justify-content: space-between;
+  margin-top: 50px;
+}
+
+.inp input {
+  border: none;
+  border-bottom: 1px solid rgb(209, 206, 206);
+  outline: none;
+  padding: 5px;
+  width: 40%;
+}
+
+.lastinp input {
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid rgb(209, 206, 206);
+  outline: none;
+  padding: 5px;
+  margin-top: 50px;
+
+}
+
+.btn {
+  width: 200px;
+  padding: 10px;
+  background-color: #6e237e;
+  color: #fff;
+  text-align: center;
+  border-radius: 8px;
+  margin-top: 50px;
+}
+
+
+
+.img {
+  width: 50%;
+  direction: rtl;
+  height: 100%;
+}
+
+.img img {
+  height: 550px;
+  border-top-right-radius: 20px;
+  border-bottom-right-radius: 20px;
+}
+
+
+@media(max-width: 1200px) {
+  .parent {
+    flex-direction: column-reverse;
     text-align: center;
-    border-radius: 8px;
-    margin-top: 50px;
+  }
+
+  .textt {
+    width: 100%;
+  }
+
+  .img {
+    width: 100%;
+    height: 400px;
+  }
+  .img img{
+    width: 100%;
+    height: 400px;
+    object-fit: cover;
+  border-top-right-radius: 0;
+  border-bottom-left-radius: 20px;
+  border-bottom-right-radius: 20px;
+  }
+
+
+
+
 }
-
-
-
-.img{
-width: 50%;
-direction: rtl;
-height: 100%;
-}
-.img img{
-    height: 550px;
-    border-top-right-radius: 20px;
-    border-bottom-right-radius: 20px;
-      }
-
-
-      @media(max-width: 1200px){
-        .parent{
-            flex-direction: column;
-            text-align: center;
-         
-        
-        }
-        .textt{
-            width: 100%;
-        }
-        .img{
-            
-            display: none;
-        }
-       
-    
-
-
-      }
-
-      @media(max-width: 770px){
-        .parent{
-            width: 90%;
-        }
-
- .inp{
-        flex-direction: column;
-        margin-top: 0;
-     }
-     .inp input{
-        margin-top: 50px;
-        width: 100%;
-       
-     }
-  
-
-      }
