--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,13 @@
 @import url('https://fonts.googleapis.com/css2?family=Almarai&display=swap');
 
+ /* @import url('https://fonts.googleapis.com/css2?family=Almarai:wght@700&display=swap'); */
+
 
 
 body {
   font-family: 'Almarai', sans-serif;
+  user-select: none;
+  -webkit-user-drag: none;
   
 }
 
