--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -25,8 +25,8 @@
 }
 
 .textt p {
-  font-size: 30px;
-  font-style: oblique;
+  font-size: 15px;
+
   font-weight: 700;
   padding: 10px;
 }
@@ -80,8 +80,79 @@
 }
 
 
+.parent2{
+  display: flex;
+  justify-content: space-between;
+
+  width: 80%;
+  margin: auto;
+  height: 500px;
+  height: fit-content;
+  background-color: #fff;
+  border-radius: 45px;
+  align-items: center;
+}
+.inp2 {
+  display: flex;
+  align-items: center;
+  margin-top: 50px;
+  flex-direction: column;
+}
+
+.inp2 input {
+  border: none;
+  border-bottom: 1px solid rgb(209, 206, 206);
+  outline: none;
+  padding: 5px;
+  width: 100%;
+  margin-top: 50px;
+}
+.inp2 input:focus {
+ 
+}
+.btn2{
+  
+    width: 100%;
+    padding: 10px;
+    background-color: #6e237e;
+    color: #fff;
+    text-align: center;
+    border-radius: 8px;
+    margin-top: 50px;
+ 
+}
+
+
+
+.textt2 {
+  padding: 40px;
+  margin: 10px;
+  width: 50%;
+  align-items: center;
+  
+}
+
+
+.textt2 h1 {
+  font-size: 40px;
+  font-style: oblique;
+  font-weight: 900;
+}
+
+.textt2 p {
+  font-size: 30px;
+  font-style: oblique;
+  font-weight: 700;
+  padding: 10px;
+}
+
+
 @media(max-width: 1200px) {
   .parent {
+    flex-direction: column-reverse;
+    text-align: center;
+  }
+  .parent2 {
     flex-direction: column-reverse;
     text-align: center;
   }
@@ -98,9 +169,13 @@
     width: 100%;
     height: 400px;
     object-fit: cover;
-  border-top-right-radius: 0;
-  border-bottom-left-radius: 20px;
-  border-bottom-right-radius: 20px;
+  border-bottom-right-radius: 0;
+  border-bottom-left-radius: 0;
+  border-top-left-radius: 20px;
+  border-top-right-radius: 20px;
+  }
+  .textt2 {
+    width: 100%;
   }
 
 }
