--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,35 +1,4 @@
-.parent {
-  display: flex;
-  justify-content: space-between;
 
-  width: 80%;
-  margin: auto;
-  height: 500px;
-  height: fit-content;
-  background-color: #fff;
-  border-radius: 45px;
-
-
-}
-
-.textt {
-  padding: 40px;
-  margin: 10px;
-  width: 50%;
-}
-
-.textt h1 {
-  font-size: 40px;
-  font-style: oblique;
-  font-weight: 900;
-}
-
-.textt p {
-  font-size: 15px;
-
-  font-weight: 700;
-  padding: 10px;
-}
 
 .inp {
   display: flex;
@@ -83,13 +52,13 @@
 .parent2{
   display: flex;
   justify-content: space-between;
-
+  z-index: 2;
   width: 80%;
   margin: auto;
   height: 500px;
   height: fit-content;
   background-color: #fff;
-  border-radius: 45px;
+  border-radius: 30px;
   align-items: center;
 }
 .inp2 {
@@ -107,18 +76,15 @@
   width: 100%;
   margin-top: 50px;
 }
-.inp2 input:focus {
- 
-}
 .btn2{
-  
     width: 100%;
     padding: 10px;
     background-color: #6e237e;
     color: #fff;
     text-align: center;
     border-radius: 8px;
-    margin-top: 50px;
+    margin-bottom: 50px;
+    margin: auto;
  
 }
 
@@ -128,19 +94,17 @@
   padding: 40px;
   margin: 10px;
   width: 50%;
-  align-items: center;
   
 }
 
 
 .textt2 h1 {
-  font-size: 40px;
-  font-style: oblique;
-  font-weight: 900;
+  font-size: 30px;
+  font-weight: 600;
 }
 
 .textt2 p {
-  font-size: 30px;
+  font-size: 15px;
   font-style: oblique;
   font-weight: 700;
   padding: 10px;
@@ -148,6 +112,19 @@
 
 
 @media(max-width: 1200px) {
+  
+  .inp{
+    flex-direction: column;
+    margin-top: 0;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  .inp input{
+    width: 100%;
+    margin-top: 30px;
+
+  }
   .parent {
     flex-direction: column-reverse;
     text-align: center;
@@ -155,6 +132,7 @@
   .parent2 {
     flex-direction: column-reverse;
     text-align: center;
+    border-radius: 0 ;
   }
 
   .textt {
@@ -163,16 +141,16 @@
 
   .img {
     width: 100%;
-    height: 400px;
+    height:300px;
   }
   .img img{
     width: 100%;
-    height: 400px;
+    height: 300px;
     object-fit: cover;
   border-bottom-right-radius: 0;
   border-bottom-left-radius: 0;
-  border-top-left-radius: 20px;
-  border-top-right-radius: 20px;
+  border-top-left-radius: 0;
+  border-top-right-radius: 0;
   }
   .textt2 {
     width: 100%;
