--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Almarai', sans-serif;
-  user-select: none;
+  /* user-select: none; */
   /* -webkit-user-drag: none; */
   overflow-x: hidden
   
