--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,7 +6,7 @@
 
 body {
   font-family: 'Almarai', sans-serif;
-  /* user-select: none; */
+  user-select: none;
   -webkit-user-drag: none;
   overflow-x: hidden
   
@@ -47,6 +47,14 @@ body {
 
   }
   
+}
+
+
+@media (max-width: 920px) {
+  .animated-title::after {
+    animation: none;
+    width: 80%;
+  }
 }
 
 
