--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
  /* @import url('https://fonts.googleapis.com/css2?family=Almarai:wght@700&display=swap'); */
  body {
   font-family: 'Almarai', sans-serif;
-  user-select: none;
+  /* user-select: none; */
   -webkit-user-drag: none;
   overflow-x: hidden
   
