--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,7 +3,7 @@
  /* @import url('https://fonts.googleapis.com/css2?family=Almarai:wght@700&display=swap'); */
  body {
   font-family: 'Almarai', sans-serif;
-  /* user-select: none; */
+  user-select: none;
   -webkit-user-drag: none;
   overflow-x: hidden
   
@@ -53,6 +53,36 @@
     width: 80%;
   }
 }
+
+
+
+
+
+
+
+
+
+/* Apply the scrollbar style to the element with overflow-y-auto */
+::-webkit-scrollbar {
+  width: 8px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+  background: #ffff;
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+ @apply bg-main;
+  border-radius: 4px;
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+  @apply bg-sec;
+}
+
 
 
 /* Tailwind config */
