--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@
  body {
   font-family: 'Almarai', sans-serif;
   /* user-select: none; */
-  -webkit-user-drag: none;
+  /* -webkit-user-drag: none; */
   overflow-x: hidden
   
 }
