--- a/client/src/components/sideBar/sideBar.css
+++ b/client/src/components/sideBar/sideBar.css
@@ -11,6 +11,13 @@
 }
 
 
+
+
+
+
+
+@media (min-width: 1200px){
+  
 @keyframes sideBarAnimation {
   0%{
     width: 200px;
@@ -32,27 +39,40 @@
   }
 }
 
+
+
+}
 /* Adjust animation for screens with a maximum width of 768px */
-@media (max-width: 900px) {
+/* @media (max-width: 900px) {
+  
+.sideBarAnimation{ 
+  animation: sideBarAnimation .3s forwards ;
+}
+
   
 @keyframes sideBarAnimation {
   0%{
-    width: 180px;
+    height: 180px;
   }
   100%{
-    width: 50px;
+    height: 50px;
   }
   
+}
+
+.sideBarAnimationR{
+  width: 100%;
+  animation: sideBarAnimationR .3s forwards ;
 }
 
   
 @keyframes sideBarAnimationR {
   0% {
-    width: 50px;
+    height:  50px;
   }
   100% {
-    width: 180px;
+    height:  180px;
   }
 }
 
-}
+} */
