--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,7 @@
   user-select: none;
   -webkit-user-drag: none;
   overflow-x: hidden;
-  background: #f5f5f5;
+  background: #f7f2fb;
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg xmlns='http://www.w3.org/2000/svg' width='33' height='33'%3E%3Cpath d='M0 0h2.25Zm0 0v2.25Zm33 33h-2.25Zm0 0v-2.25Zm0-33h-2.25Zm0 0v2.25ZM0 33v-2.25Zm0 0h2.25Z' stroke-opacity='.065' stroke-width='1.1' stroke='%23000'/%3E%3C/svg%3E");
 
   
@@ -116,6 +116,34 @@
 
 
 
+/* CustomSelect.css */
+
+/* Style for the custom select container */
+.custom-select {
+  position: relative;
+  display: inline-block;
+  background-color: white; /* Change this to your desired background color */
+  border-radius: 0.25rem;
+  font-size: 1rem;
+}
+
+/* Style for the select element */
+.custom-select select {
+  background-color: transparent;
+  border: none;
+  outline: none;
+  padding: 0.5rem 2rem 0.5rem 0.5rem;
+  width: 100%;
+  appearance: none;
+}
+
+/* Style for the dropdown icon */
+.custom-select .dropdown-icon {
+  position: absolute;
+  top: 50%;
+  right: 0.5rem;
+  transform: translateY(-50%);
+}
 
 
 
