--- a/client/src/index.css
+++ b/client/src/index.css
@@ -298,6 +298,7 @@ input:checked + .slider:before {
   cursor: pointer;
   height: 0;
   width: 0;
+  
 }
 
 /* Create a custom checkbox */
@@ -307,9 +308,9 @@ input:checked + .slider:before {
   left: 0;
   height: 20px;
   width: 20px;
+  border-radius: 50%; /* Make the checkbox circular */
   background-color: #eee;
 }
-
 /* On mouse-over, add a grey background color */
 .container:hover input ~ .checkmark {
   background-color: #ccc;
@@ -317,7 +318,7 @@ input:checked + .slider:before {
 
 /* When the checkbox is checked, add a blue background */
 .container input:checked ~ .checkmark {
-  background-color: #2196F3;
+  background-color: #72f321;
 }
 
 /* Create the checkmark/indicator (hidden when not checked) */
