--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,8 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Almarai&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Rubik:wght@300&display=swap');
 
- /* @import url('https://fonts.googleapis.com/css2?family=Almarai:wght@700&display=swap'); */
+
  body {
-  font-family: 'Almarai', sans-serif;
+   font-family: 'Almarai', sans-serif;
   /* user-select: none; */
   /* -webkit-user-drag: none; */
   user-select: none;
